Adjust various font size Adjust Control display(size and alignment) Add no camera screen Fix hamburger bug Fix advance adjust bug

--- a/src/components/Menu/Adjust/index.module.css
+++ b/src/components/Menu/Adjust/index.module.css
@@ -4,7 +4,7 @@
     align-items: center;
 }
 .adjust-name {
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 600;
 }
 .adjust-value {
@@ -16,7 +16,7 @@
 .adjust-advance {
     display: flex;
     padding: 10px 15px;
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 600;
     justify-content: space-between;
     align-items: center;
