--- a/src/components/Menu/Control/index.module.css
+++ b/src/components/Menu/Control/index.module.css
@@ -1,5 +1,6 @@
 .ratio-icon {
-    font-size: 12px;
+    font-size: 24px;
+    padding-right: 3px;
 }
 .selected {
     color: '#0078AE'
