--- a/src/components/SliderBar/index.module.css
+++ b/src/components/SliderBar/index.module.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     padding: 6px 0;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 600;
     color: '#1D2C41';
     text-align: center;
